Remove explicit calls to g_thread_init()
With recent glib, g_type_init() initializes the thread system for us and
g_thread_init() has been deprecated in GLib-2.32.

https://bugzilla.gnome.org/show_bug.cgi?id=673472

--- a/configure.ac
+++ b/configure.ac
@@ -50,6 +50,8 @@ AC_SUBST(GST_MAJORMINOR)
 GST_CFLAGS="$GST_CFLAGS -DGST_USE_UNSTABLE_API"
 AC_SUBST(GST_CFLAGS)
 
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.24)
+
 # glib-genmarshal
 GLIB_GENMARSHAL=`pkg-config --variable=glib_genmarshal glib-2.0`
 AC_SUBST(GLIB_GENMARSHAL)
