--- a/gupnp-dlna-1.0-uninstalled.pc.in
+++ b/gupnp-dlna-1.0-uninstalled.pc.in
@@ -8,4 +8,4 @@ Description: GObject-based AV specific UPnP library
 Version: @VERSION@
 Libs: ${libdir}/libgupnp-dlna-1.0.la
 Cflags: -I${includedir} -I$(top_srcdir)/gst-convenience/gst-libs
-Requires: gstreamer-0.10 gstreamer-base-0.10 gstreamer-video-0.10
+Requires: gstreamer-@GST_MAJORMINOR@ gstreamer-base-@GST_MAJORMINOR@ gstreamer-video-@GST_MAJORMINOR@
