--- a/tests/test-discoverer.sh.in
+++ b/tests/test-discoverer.sh.in
@@ -26,7 +26,7 @@
 #   git clone git://git.gnome.org/gupnp-dlna-media tests/media
 
 if [[ "x${GUPNP_DLNA_INFO}" = "x" ]]; then
-  GUPNP_DLNA_INFO=@abs_top_builddir@/tools/gupnp-dlna-info
+  GUPNP_DLNA_INFO=@abs_top_builddir@/tools/gupnp-dlna-info-2.0
 fi
 
 # See if params are available in the environment - if yes, carry on, else read
