Upgrade build system to build all the new code
Also, bumped API version to 2.0.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,53 @@
 *.o
 *.service
 *.stamp
+.dirstamp
+/build-aux
+INSTALL
+doc/version.xml
+doc/gupnp-dlna/gupnp-dlna-decl-list.txt
+doc/gupnp-dlna/gupnp-dlna-decl.txt
+doc/gupnp-dlna/gupnp-dlna-overrides.txt
+doc/gupnp-dlna/gupnp-dlna-sections.txt
+doc/gupnp-dlna/gupnp-dlna-undeclared.txt
+doc/gupnp-dlna/gupnp-dlna-undocumented.txt
+doc/gupnp-dlna/gupnp-dlna-unused.txt
+doc/gupnp-dlna/gupnp-dlna.args
+doc/gupnp-dlna/gupnp-dlna.hierarchy
+doc/gupnp-dlna/gupnp-dlna.interfaces
+doc/gupnp-dlna/gupnp-dlna.prerequisites
+doc/gupnp-dlna/gupnp-dlna.signals
+doc/gupnp-dlna/gupnp-dlna.types
+doc/gupnp-dlna/html/
+doc/gupnp-dlna/xml/
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata-decl-list.txt
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata-decl.txt
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata-overrides.txt
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata-sections.txt
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata-undeclared.txt
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata-undocumented.txt
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata-unused.txt
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata.args
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata.hierarchy
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata.interfaces
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata.prerequisites
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata.signals
+doc/gupnp-dlna-metadata/gupnp-dlna-metadata.types
+doc/gupnp-dlna-metadata/html/
+doc/gupnp-dlna-metadata/xml/
+m4/gtk-doc.m4
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+*.gir
+*.typelib
+tests/dlna-encoding
+tools/gupnp-dlna-info-2.0
+tools/gupnp-dlna-ls-profiles-2.0
+tests/test-discoverer.sh
+tests/sets
 aclocal.m4
 autom4te.cache
 config.guess
@@ -19,8 +66,10 @@ config.sub
 configure
 depcomp
 gtk-doc.make
-gupnp-dlna-1.0.pc
-gupnp-dlna-1.0-uninstalled.pc
+gupnp-dlna-2.0.pc
+gupnp-dlna-metadata-2.0.pc
+gupnp-dlna-2.0-uninstalled.pc
+gupnp-dlna-*.tar.xz
 install-sh
 libgupnp-dlna/gupnp-dlna-marshal.c
 libgupnp-dlna/gupnp-dlna-marshal.h
