--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,13 +1,17 @@
-noinst_PROGRAMS = dlna-profile-parser dlna-encoding
+noinst_PROGRAMS = sets
 
-AM_CFLAGS = -I$(top_srcdir) $(GST_CFLAGS) $(GST_PBU_CFLAGS) $(LIBXML_CFLAGS)
-LIBS = $(GST_LIBS) \
-       $(LIBXML_LIBS) \
-       $(GST_PBU_LIBS) \
-       $(top_builddir)/libgupnp-dlna/libgupnp-dlna-1.1.la
-
-dlna_profile_parser_SOURCES = dlna-profile-parser.c
-dlna_encoding_SOURCES = dlna-encoding.c
-
-TESTS_ENVIRONMENT = MEDIA_DIR="$(srcdir)/media" FILE_LIST="$(srcdir)/media/media-list.txt" ${SHELL}
-TESTS = test-discoverer.sh
+sets_SOURCES = \
+	sets.c
+sets_LDADD = \
+	$(GLIB_LIBS) \
+	$(GOBJECT_LIBS) \
+	$(LIBXML_LIBS) \
+	$(GMODULE_LIBS) \
+	$(top_builddir)/libgupnp-dlna/libgupnp-dlna-2.0.la
+sets_CFLAGS = \
+	$(GLIB_CFLAGS) \
+	$(GOBJECT_CFLAGS) \
+	$(LIBXML_CFLAGS) \
+	$(GMODULE_CFLAGS) \
+	-I$(top_srcdir)/libgupnp-dlna/profile-backends/native \
+	-I$(top_srcdir)/libgupnp-dlna/profile-backends/native/sets
