--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,9 +1,22 @@
-bin_PROGRAMS = gupnp-dlna-info-1.1 gupnp-dlna-ls-profiles-1.1
+bin_PROGRAMS = \
+	gupnp-dlna-info-2.0 \
+	gupnp-dlna-ls-profiles-2.0
 
-AM_CFLAGS = -I$(top_srcdir) $(GST_CFLAGS) $(GST_PBU_CFLAGS)
-gupnp_dlna_info_1_1_SOURCES = gupnp-dlna-info.c
-gupnp_dlna_ls_profiles_1_1_SOURCES = gupnp-dlna-ls-profiles.c
+AM_CFLAGS = \
+	-I$(top_srcdir) \
+	$(GLIB_CFLAGS) \
+	$(GOBJECT_CFLAGS) \
+	$(LIBXML_CFLAGS) \
+	$(GMODULE_CFLAGS)
+LIBS = \
+	$(GLIB_LIBS) \
+	$(GOBJECT_LIBS) \
+	$(LIBXML_LIBS) \
+	$(GMODULE_LIBS) \
+	$(top_builddir)/libgupnp-dlna/libgupnp-dlna-2.0.la
 
-LIBS = $(GST_LIBS) \
-       $(GST_PBU_LIBS) \
-       $(top_builddir)/libgupnp-dlna/libgupnp-dlna-1.1.la
+gupnp_dlna_info_2_0_SOURCES = \
+	gupnp-dlna-info.c
+
+gupnp_dlna_ls_profiles_2_0_SOURCES = \
+	gupnp-dlna-ls-profiles.c
