Fix a status message when GStreamer is not found.
When enable-gstreamer-metadata-backend is auto and GStreamer is not
found then we should display 'no' instead of 'auto'.

--- a/configure.ac
+++ b/configure.ac
@@ -89,6 +89,8 @@ then
         elif test "x$enable_gstreamer_metadata_backend" = 'xyes'
         then
                 AC_MSG_ERROR([GStreamer $GST_MAJORMINOR not found.])
+        else
+                enable_gstreamer_metadata_backend='no'
         fi
 fi
 
