--- a/libgupnp-dlna/profile-backends/native/sets/sets.am
+++ b/libgupnp-dlna/profile-backends/native/sets/sets.am
@@ -8,5 +8,6 @@ sets_sources = \
 	profile-backends/native/sets/gupnp-dlna-native-value.h \
 	profile-backends/native/sets/gupnp-dlna-native-value-list.c \
 	profile-backends/native/sets/gupnp-dlna-native-value-list.h \
+	profile-backends/native/sets/gupnp-dlna-native-value-list-private.h \
 	profile-backends/native/sets/gupnp-dlna-native-value-type.c \
 	profile-backends/native/sets/gupnp-dlna-native-value-type.h
