--- a/doc/gupnp-dlna-metadata/Makefile.am
+++ b/doc/gupnp-dlna-metadata/Makefile.am
@@ -86,3 +86,4 @@ include $(top_srcdir)/gtk-doc.make
 
 # Other files to distribute
 # e.g. EXTRA_DIST += version.xml.in
+DISTCLEANFILES = version.xml
