--- a/gupnp-dlna-metadata-2.0.pc.in
+++ b/gupnp-dlna-metadata-2.0.pc.in
@@ -7,6 +7,5 @@ plugindir=@METADATA_DIRECTORY@
 Name: gupnp-dlna-metadata-2.0
 Description: Metadata extractor plugin development files for GUPnP-DLNA
 Version: @VERSION@
-Libs: -L${libdir} -lgupnp-dlna-2.0
 Cflags: -I${includedir}/gupnp-dlna-2.0/metadata
-Requires: glib-2.0 gobject-2.0
+Requires: glib-2.0 gobject-2.0 gupnp-dlna-2.0
