--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
+vala/gupnp-dlna-2.0.vapi
 *.gir
 *.typelib
 tests/dlna-encoding
