--- a/libgupnp-dlna/Makefile.am
+++ b/libgupnp-dlna/Makefile.am
@@ -121,7 +121,8 @@ libgupnp_dlna_2_0_la_SOURCES = \
 	gupnp-dlna-value-list.c \
 	gupnp-dlna-g-values.c \
 	gupnp-dlna-utils.c \
-	gupnp-dlna-value-type.c
+	gupnp-dlna-value-type.c \
+	gupnp-dlna-info-value.c
 libgupnp_dlna_2_0_la_LIBADD = \
 	$(gupnp_libadd) \
 	libloader.la \
@@ -162,7 +163,8 @@ dist_noinst_HEADERS += \
 	gupnp-dlna-g-values-private.h \
 	gupnp-dlna-utils.h \
 	gupnp-dlna-value-union.h \
-	gupnp-dlna-value-type.h
+	gupnp-dlna-value-type.h \
+	gupnp-dlna-info-value.h
 
 
 # INTROSPECTION
