Move info set to main source directory.

--- a/libgupnp-dlna/Makefile.am
+++ b/libgupnp-dlna/Makefile.am
@@ -123,7 +123,8 @@ libgupnp_dlna_2_0_la_SOURCES = \
 	gupnp-dlna-utils.c \
 	gupnp-dlna-value-type.c \
 	gupnp-dlna-info-value.c \
-	gupnp-dlna-value.c
+	gupnp-dlna-value.c \
+	gupnp-dlna-info-set.c
 libgupnp_dlna_2_0_la_LIBADD = \
 	$(gupnp_libadd) \
 	libloader.la \
@@ -166,7 +167,8 @@ dist_noinst_HEADERS += \
 	gupnp-dlna-value-union.h \
 	gupnp-dlna-value-type.h \
 	gupnp-dlna-info-value.h \
-	gupnp-dlna-value.h
+	gupnp-dlna-value.h \
+	gupnp-dlna-info-set.h
 
 
 # INTROSPECTION
