--- a/libgupnp-dlna/profile-backends/native/sets/sets.am
+++ b/libgupnp-dlna/profile-backends/native/sets/sets.am
@@ -1,3 +1,1 @@
-sets_sources = \
-	profile-backends/native/sets/gupnp-dlna-native-info-set.c \
-	profile-backends/native/sets/gupnp-dlna-native-info-set.h
+sets_sources =
